testdata/golden/hir_borrow/invalid/spawn_escape.hir
error SEM3021 testdata/golden/hir_borrow/invalid/spawn_escape.sg:6:30 cannot send 'r' to a spawned task

== HIR ==
module 

async fn use_ref(x: &int [&]) -> nothing (id=1, sym=1204) {
}

borrow edges:
  <none>
events:
  <none>
move plan:
  L2409(x): MoveCopy (copy type)

async fn t() -> nothing (id=2, sym=1205) {
  let mut x: int [copy] = 1
  let r: &int [&] = (& x): &int
  let task: type#1317 = spawn use_ref(r): type#1317: type#1317
  await(task): type#1318
  return
}

borrow edges:
  L2411(r) (&) borrows L2410(x) at 0:87-89 scope=S5
events:
  borrow_start L2411(r) -> L2410(x) (&) at 0:87-89 scope=S5 note="B1"
  spawn_escape L2411(r) -> L2410(x) at 0:120-121 scope=S5 note="B1"
  move L2412(task) at 0:128-132 scope=S5
  borrow_end L2411(r) -> L2410(x) scope=S5 note="scope_end B1"
move plan:
  L2410(x): MoveCopy (copy type)
  L2411(r): MoveForbidden (spawn escape)
  L2412(task): MoveNeedsDrop (non-copy (drop))

